2000-07-13  Tristan Tarrant  <tarrant_tristan@emc.com>

	* palette.cc, palette.h: New files which handle palette functions. 
	Now it is possible to use palettes from different data files.
	* exult.spec.in: simple spec file for creating RPM packages
	* titles.cc, titles.h: Moved intro, endgame and other bits and pieces
	in here. Introduction is nearly complete. 
	* flic/playfli.cc: Center flic on display
	* exult.cc: rearchitected the way the intro stuff is done
	* gamewin.cc: expunged most of the palette and intro junk. Some more 
	cleanups required however.
	* audio/Audio.h, audio/Audio.cc: allow bank choice in start_music
	* audio/Midi.cc: include another MIDI bank (the intro music).
	* fnames.h: Added intro music data file
	* usecode.cc: changed endgame invocation
	* .cvsignore: updated

2000-07-02  Jeff Freedman  <jeff@amy.nerble.net>

	* Starting support for projectile weapons.

2000-06-30  Jeff Freedman  <jeff@amy.nerble.net>

	* Death of Avatar works fairly well now.

2000-06-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Fullscreen-toggle and scaling work together (tested on X).

2000-06-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Death and resurrection.

2000-06-25  Tristan Tarrant  <tarrant_tristan@emc.com>

	* Makefile.am, exult.cc: use VERSION instead of RELNUM
	* exult.cc, gamewin.cc: move config stuff about splash to exult.cc

2000-06-24  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps.cc (Stats_gump_object): Show name.
	* exult.cc: 'z' key brings up statistics.
	* Weapon readied automatically.  Weapons.dat, armor.dat read.
	* Hunger (everyone's favorite feature!)
	* More fiddling (possibly improvement) in followers of Avatar.

2000-06-22  Jeff Freedman  <jeff@patches.simutech.com>

	* effects.cc: Untested: Faster projectiles.  Run usecode at end.
	* combat.cc: Show 'strike' sequence during attack (untested).

2000-06-17  Jeff Freedman  <jeff@amy.nerble.net>

	* Scaling:  Set width=320, height=200, scale=2 in config file.
